# kf-1

./: .env.production  .eslintrc.js  .gitattributes  .gitignore  .rebel_readline_history  README.md  buildsass  package-lock.json  package.json  project.clj
Game/: GameEnvAdapter.cpp  GameEnvAdapter.hpp
cpp/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  conanfile.py  run-build  test  test.profile  toolchain.cmake
cpp/include/entt/: entt.hpp
cpp/public/: Game.cpp  Game.h  Game.hpp  game.cpp  js_config.hpp  js_event_emitter.cpp  js_event_emitter.hpp  main.cpp  main.hpp  test.cpp
cpp/public/encoder/: coder_key_mapping.cpp  coder_key_mapping.hpp  encoded_message_builder.cpp  encoded_message_builder.hpp
cpp/src/: Game.cpp  Game.h  GameEnv.cpp  GameEnv.hpp  JsEventEmitter.cpp  JsEventEmitter.hpp  event_emitter.hpp  game_controller.cpp  game_controller.hpp  game_env.cpp  game_env.hpp  js_event_emitter.cpp  js_event_emitter.hpp  systems_controller.cpp  systems_controller.hpp
cpp/src/Game/: GameEnvAdapter.cpp  GameEnvAdapter.h  GameEnvAdapter.hpp
cpp/src/common/encoder/: CoderKeyMapping.cpp  CoderKeyMapping.h  EncodedMessageBuilder.cpp  EncodedMessageBuilder.h  EncodedMessageBuilder.hpp  coder_key_mapping.cpp  coder_key_mapping.hpp  encoded_message_builder.cpp  encoded_message_builder.hpp
cpp/src/common/models/: Pt.cpp  Pt.h  Pt.hpp
cpp/src/components/: CBasic.hpp  CCharacterState.cpp  CMove.cpp  CMove.hpp  CharState.cpp  CharState.h  CharState.hpp  CharacterState.cpp  CharacterState.hpp  basic.h  basic.hpp  c_basic.hpp  c_character_state.cpp  c_character_state.hpp  c_move.cpp  c_move.hpp  c_movement.cpp  c_movement.hpp  c_orientation.cpp  c_orientation.hpp
cpp/src/factories/: character_entity_factory.cpp  character_entity_factory.hpp
cpp/src/game/: GameEnv.cpp  GameEnv.h  GameEnv.hpp
cpp/src/models/: GameMap.cpp  GameMap.hpp  Pt.cpp  Pt.hpp  game_map.cpp  game_map.hpp  pt.cpp  pt.hpp
cpp/src/models/common/: Pt.cpp  Pt.hpp
cpp/src/systems/: MoveSystem.cpp  MoveSystem.hpp  System.hpp  broadcast_system.cpp  broadcast_system.hpp  broadcast_updates_system.cpp  broadcast_updates_system.hpp  move_system.cpp  move_system.hpp  system.hpp
cpp/src/systems/move/: move_handler.cpp  move_handler.hpp  move_system.cpp  move_system.hpp
cpp/src/utils/Encoder/: CoderKeyMapping.cpp  CoderKeyMapping.h
cpp/tests/: CMakeLists.txt
cpp/tests/common/components/: c_move_test.cpp  c_movement_test.cpp
cpp/tests/common/encoder/: CoderKeyMappingTest.cpp  EncodedMessageBuilderTest.cpp  coder_key_mapping_test.cpp  encoded_message_builder_test.cpp
cpp/tests/common/factories/: character_entity_factory_test.cpp
cpp/tests/common/models/: Pt.cpp  PtTest.cpp  game_map_test.cpp  pt_test.cpp
cpp/tests/common/systems/move/: move_handler_test.cpp  move_system_test.cpp
cpp/tests/components/: c_movement_test.cpp
cpp/tests/factories/: character_entity_factory_test.cpp
cpp/tests/models/: pt_test.cpp
cpp/tests/systems/move/: move_handler_test.cpp  move_system_test.cpp
cpp/tests/utils/Encoder/: CoderKeyMappingTest.cpp
docs/app/: config.doc.js.html  engine_asset-manager_index.js.html  game_engine_asset-manager_index.js.html  game_engine_scene-manager_index.js.html  game_index.js.html  index.html  index.js.html  module-config.html  module-game.html  module-game_engine_asset-manager.html  module-game_engine_scene-manager-sceneManager.html  module-game_engine_scene-manager.html
js/: .gitignore  .import.js  README.md  package-lock.json  package.json  tags
js/docs/app/: config.doc.js.html  engine_scene-manager_index.js.html  game_engine_asset-manager_index.js.html  global.html  index.doc.js.html  module-config.html  module-game.html  module-game_engine_scene-manager.html
js/public/: index.html
js/public/game-wasm/: battle_rust.js  package.json
js/public/test-wasm/: game-wasm.js  game-wasm.wasm.map  game.js  test-wasm.html  test-wasm.js
js/public/wasm_init/: post.js  pre.js
js/src/: battleground  config.doc.js  config.json  index.js  index.scss  registerServiceWorker.js
js/src/app/: game.js  index.js  index.test.js  ui.js
js/src/assets/: chars.json  index.js  main-loading.json
js/src/game/: index.js
js/src/store/: epics.js  reducers.js  store.js
js/src/ui/: index.js
js/src/utils/: arrUtils.js  dictUtils.js  encoder.js  global.js  img.js  pixi.utils.js  swapKV.js
kf1-cljs/: .lein-repl-history  .rebel_readline_history  README.md  buildsass  package-lock.json  package.json  project.clj
kf1-cljs/resources/assets/: chars.json  goblins.json
kf1-cljs/resources/public/: index.html
kf1-cljs/resources/wasmtest/: battleground_rust_bg.wasm
kf1-cljs/src/wasm-test/: battleground_rust.js  package.json
kf1-cljs/wasmtest2/: Cargo.toml
kf1-cljs/wasmtest2/src/: lib.rs
lib/battleground/: package-lock.json  package.json  shadow-cljs.edn
lib/battleground-rust/: Cargo.toml
lib/battleground-rust/pkg/: battleground_rust.js  package.json
lib/battleground-rust/tempbuild/: battleground_rust.js  battleground_rust_bg.wasm
resources/js/game-engine/: .babelrc  package-lock.json  package.json
resources/public/: index.html
resources/public/css/: styles.css.map
resources/rust/battle-rust/: start-node
rust/: .gitignore  Cargo.toml  start-dev  start-node
rust/battle-rust/: Cargo.toml  start-dev
rust/battle-rust/src/: lib.rs
rust/build-node/: battle_rust.js
rust/src/: js_imports.rs  js_macros.rs  lib.rs  types.rs  utils.rs
rust/src/components/: basic.rs  char_resources.rs  mod.rs
rust/src/ecs/: components.rs  mod.rs
rust/src/game/: adapter.rs  blah.rs  builder.rs  factory.rs  input.rs  interface.rs  main.rs  mod.rs
src/: battleground-rust  config.json  index.css  index.js  index.scss  index.test.js  registerServiceWorker.js  wasm-test.js
src/assets/: goblins.json  index.js  level-one.json  main-loading.json  main.json
src/game/: index.js
src/ui/: index.js
src/utils/: cljs.utils.js  dictUtils.js  global.js  pixi.utils.js  reduxHelpers.js  request.js  scale.js
utils/Encoder/: CoderKeyMapping.h
(+223 files in other folders)
